tests/negative/traits/impl_type_for.orng
// error: cannot implement for this, not a trait
// 
impl Int for () {
    
}